# Pawn2Queen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.template.yaml  pyproject.toml  requirements.txt
notebooks/: play_vs_computer.ipynb
src/config/: NeuralChessBot.py  T100ChessBot.py  T22ChessBot.py  stockfish.py
src/evaluate/: evaluate.py
src/models/: NeuralChessBot.py  RandomChessBot.py  T100ChessBot.py  T22ChessBot.py
src/train/: dataset.py  main.py
src/utils/: board.py  game.py  training.py  utils.py
