[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pawn2Queen"
version = "0.1"
description = "Transformer-powered Chess AI"
readme = "README.md"
license = { file = "MIT" }
authors = [
    { name = "Jacopo Repossi", email = "jacopo.repossi@gmail.com" }
]
dependencies = [
    "tables==3.9.2",
    "torch==2.4.0",
    "chess==1.10.0",
    "ipykernel==6.29.5",
    "numpy==1.26.4",
    "ipywidgets==8.1.5",
    "pyyaml==6.0.2"
]
keywords = ["chess", "AI", "transformer", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]